--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="imaavalenzuela.movieapp.MovieFragment">
+    tools:context="imaavalenzuela.movieapp.ui.movie.MovieFragment">
 
 
     <RelativeLayout
